fixed months problem. still cannot reference chart / not responsive

--- a/src/app/history/history.less
+++ b/src/app/history/history.less
@@ -1,6 +1,5 @@
 .history {
   text-align:center;
-  width: 100%;
 }
 
 .history .helpbox {
@@ -10,12 +9,23 @@
 
 .history #canvas {
   margin-bottom:10px;
+  width: 100%;
+}
+
+.history .chart_wrapper {
+  display:inline-block;
+  width:96%;
+  margin-bottom:10px;
 }
 
 .history .interval {
   font-size:14px;
-  margin-left: 42%;
+  text-align: center;
   margin-top: 10px;
+  margin-bottom: 10px;
+  height: 25px;
+  width: 18%;
+  margin: 0 auto;
 }
 
 .history .months {
